@@ -1,3 +1,8 @@
+2008-07-02  Juanma Barranquero  <lekktu@gmail.com>
+
+	* org.el (org-agenda-skip-unavailable-files):
+	* org-clock.el (org-clock-out-when-done): Doc fixes.
+
 2008-06-18  Glenn Morris  <rgm@gnu.org>
 
 	* org.el (org-map-entries): Let-bind `file'.
@@ -21,7 +26,7 @@
 	(org-read-date): Respect `org-overriding-default-time'.
 
 	* org-remember.el (org-remember-apply-template): Respect the
-	ovverriding default time.
+	overriding default time.
 
 	* org-agenda.el (org-agenda-action-marker): New variable.
 	(org-agenda-action): New command.
